chore: avoid using SQL queries with Hibernate